--- a/relazione/CNCSimulator_relazione.tex
+++ b/relazione/CNCSimulator_relazione.tex
@@ -67,8 +67,8 @@
  %%niente sezioni anche qui, ovvio....
 \clearpage
 
-% \bibliographystyle{plain}
-% \bibliography{biblio}
-% \addcontentsline{toc}{section}{Bibliografia}
+\bibliographystyle{plain}
+\bibliography{biblio}
+\addcontentsline{toc}{section}{Bibliografia}
 
 \end{document}
