--- a/relazione/biblio.bib
+++ b/relazione/biblio.bib
@@ -1,15 +1,41 @@
-@Article{ oneill_genuineSieve,
-	author = "Melissa E. O’Neill",
-	title = "The {G}enuine {S}ieve of {E}ratosthenes",
-	journal = "Journal of Functional Programming",
-	year = "2008",
-	note = "\url{http://www.cs.hmc.edu/~oneill/papers/Sieve-JFP.pdf}"
+@article{Lorensen:1987:MCH:37402.37422,
+ author = {Lorensen, William E. and Cline, Harvey E.},
+ title = {Marching cubes: A high resolution 3D surface construction algorithm},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {July 1987},
+ volume = {21},
+ number = {4},
+ month = aug,
+ year = {1987},
+ issn = {0097-8930},
+ pages = {163--169},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/37402.37422},
+ doi = {10.1145/37402.37422},
+ acmid = {37422},
+ publisher = {ACM},
+ address = {New York, NY, USA},
 }
 
-@Book{ ppmpi,
-	title = "Parallel Programming in C with MPI and OpenMP",
-	author = "Michael J. Quinn",
-	publisher = "Mc Graw Hill",
-	year = "2003"
+@book{osgbeginner,
+    author = {Wang, Rui and Qian, Xuelei},
+    howpublished = {Paperback},
+    isbn = {1849512825},
+    keywords = {computer-graphics},
+    month = dec,
+    publisher = {Packt Publishing},
+    title = {{OpenSceneGraph} 3.0: Beginner's Guide},
+    url = {http://www.worldcat.org/isbn/1849512825},
+    year = {2010}
 }
 
+@book{osgcookbook,
+    author = {Wang, Rui and Qian, Xuelei},
+    howpublished = {Paperback},
+    isbn = {184951688X},
+    keywords = {computer-graphics},
+    month = mar,
+    publisher = {Packt Publishing},
+    title = {{OpenSceneGraph} 3 Cookbook},
+    year = {2012}
+}
