--- a/relazione/section/strumenti-compilazione.tex
+++ b/relazione/section/strumenti-compilazione.tex
@@ -7,7 +7,7 @@ Il progetto è stato sviluppato usando le seguenti librerie:
 \begin{itemize}[noitemsep]
   \item Boost ($\geq 1.48$): è una libreria che fornisce diverse funzioni per molteplici scopi, come ad esempio gestione dei thread e gestione dei parametri.
   \item Eigen ($\geq 3.1.1$): è una libreria che mette a disposizione funzioni di algebra lineare;
-  \item OpenSceneGraph ($\geq 3.0.0$): è un framework che permette di interfacciarsi alle librerie OpenGL in maniera semplificata ed efficiente.
+  \item OpenSceneGraph ($\geq 3.0.0$): è un framework che permette di interfacciarsi alle librerie OpenGL in maniera semplificata ed efficiente \cite{osgbeginner}\cite{osgcookbook}.
 \end{itemize}
 
 \subsection{Istruzioni}
